# quickset-pan-tilt-controller

./: .gitignore  .readthedocs.yaml  LICENSE  PTC.py  PTC_Class.py  PTC_test.py  README.md  pyproject.toml
ClassFiles/: PanTiltController.py
docs/: architecture.md  class-diagram.puml  conf.py  index.md  index.rst  pan-tilt-controller-class-diagram.drawio  requirements.txt
src/pan_tilt_controller/: pan_tilt_controller.py
src/quickset_pan_tilt/: controller.py  protocol.py
tests/: protocol_tests.py
